# python-monorepo

./: README.md  docker-compose.yaml  pyproject.toml  service1.Dockerfile  service2.Dockerfile
src/common/: pyproject.toml
src/common/common/: main.py
src/service1/: pyproject.toml
src/service1/service1/: main.py
src/service2/: pyproject.toml
src/service2/service2/: main.py
