[tool.poetry]
name = "python-monorepo"
version = "0.1.0"
description = ""
authors = ["Kasper Primdal Lauritzen <git@kplauritzen.dk>"]

[tool.poetry.dependencies]
python = "^3.10"
common = { path = "src/common/", develop = true }
service1 = { path = "src/service1/", develop = true }
service2 = { path = "src/service2/", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
