[tool.poetry]
name = "service1"
version = "0.1.0"
description = ""
authors = ["Kasper Primdal Lauritzen <git@kplauritzen.dk>"]

[tool.poetry.dependencies]
python = "^3.10"
common = { path = "../common/", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
